--- a/index.html
+++ b/index.html
@@ -20,22 +20,25 @@
             align-items: center;
         }
         .time-unit {
-            margin: 0 10px;
+            margin: 0 15px; /* Increased spacing */
             text-align: center;
         }
         .number {
             font-size: 36px; /* Larger font size for numbers */
+            font-weight: bold; /* Bold for numbers */
             display: block;
+            margin-bottom: 5px; /* Spacing between number and text */
         }
         .red {
             color: red;
         }
         .white {
-            color: #F5F5F5; /* Pale grey */
+            color: #D3D3D3; /* Slightly darker shade of grey */
         }
         .label {
             color: black;
             font-size: 16px;
+            font-weight: normal; /* Decrease weight of the label text */
         }
     </style>
 </head>
