--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
             align-items: center;
         }
         .time-unit {
-            margin: 0 15px; /* Increased spacing */
+            margin: 0 25px; /* Increased spacing */
             text-align: center;
         }
         .number {
             font-size: 36px; /* Larger font size for numbers */
             font-weight: bold; /* Bold for numbers */
             display: block;
-            margin-bottom: 5px; /* Spacing between number and text */
+            margin-bottom: 1px; /* Spacing between number and text */
         }
         .red {
             color: red;
@@ -37,8 +37,8 @@
         }
         .label {
             color: black;
-            font-size: 16px;
-            font-weight: normal; /* Decrease weight of the label text */
+            font-size: 9px;
+            font-weight: Light; /* Decrease weight of the label text */
         }
     </style>
 </head>
