--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             color: red;
         }
         .white {
-            color: #D3D3D3; /* Slightly darker shade of grey */
+            color: #EBE9DF; /* Slightly darker shade of grey */
         }
         .label {
             color: black;
