--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             font-weight: bold; /* Bold for numbers */
             display: block;
             margin-bottom: 1px; /* Spacing between number and text */
+            letter-spacing: 2px; /* Spacing between characters in numbers */
         }
         .red {
             color: red;
@@ -37,8 +38,9 @@
         }
         .label {
             color: black;
-            font-size: 9px;
+            font-size: 11px;
             font-weight: Light; /* Decrease weight of the label text */
+            letter-spacing: 2px; /* Spacing between characters in labels */
         }
     </style>
 </head>
