--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             // If the countdown is finished
             if (distance < 0) {
                 clearInterval(x);
-                document.getElementById("timer").innerHTML = "EXPIRED";
+                document.getElementById("timer").innerHTML = "On Holiday!";
             }
         }, 1000);
     </script>
