--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             letter-spacing: 4px; /* Spacing between characters in numbers */
         }
         .red {
-            color: red;
+            color: #C5254A;
         }
         .white {
             color: #EBE9DF; /* Slightly darker shade of grey */
